--- a/src/styles/reset.scss
+++ b/src/styles/reset.scss
@@ -1,3 +1,17 @@
+html,
+body {
+  height: 100%;
+}
+
+body {
+  display: flex;
+  flex-direction: column;
+
+  background-color: #f6f6f6;
+
+  font-family: Arial, Helvetica, sans-serif;
+}
+
 html {
   font-size: 62.5%;
   line-height: 20px;
