reafctor: change main colors

--- a/src/styles/footer.scss
+++ b/src/styles/footer.scss
@@ -3,10 +3,10 @@
 
   text-align: center;
   font-size: 1.6rem;
-  color: #420000;
+  color: #7614ff;
 
   a {
-    color: #420000;
+    color: #7614ff;
   }
 
   a:hover {
