feat: create lazy loaded ErrorMessage to handle errors, change webpack.config.js

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -2,6 +2,7 @@
 @import "./header.scss";
 @import "./main.scss";
 @import "./footer.scss";
+@import "../components/ErrorMessage/styles/error.scss";
 
 @import "@material/layout-grid/mdc-layout-grid";
 @import "@material/list/mdc-list";
